--- a/TestWebProject/.settings/org.eclipse.wst.common.component
+++ b/TestWebProject/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="TestWebProject">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="TestWebProject"/>
         <property name="java-output-path" value="/TestWebProject/build/classes"/>
     </wb-module>
